[feature]: handle phase 27 (#58)
